# CFRApplication

./: .gitignore  .gitmodules  CFRThread.cpp  CFRThread.hpp  CLAUDE.md  CMakeLists.txt  Controller.cpp  Controller.hpp  MyWorker.hpp  README.md  Worker.cpp  Worker.hpp  customsquare.cpp  customsquare.h  customsquare.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp
